@@ -23,9 +23,10 @@
 
 /*
  * @test
- * @bug 8210009
+ * @bug 8210009 8321739
  * @summary Source Launcher classloader should support getResource and getResourceAsStream
- * @modules jdk.compiler jdk.jdeps
+ * @enablePreview
+ * @modules jdk.compiler
  * @library /tools/lib
  * @build toolbox.JavaTask toolbox.ToolBox
  * @run main GetResourceTest
@@ -39,8 +40,8 @@ import toolbox.Task;
 import toolbox.ToolBox;
 
 /*
- * The body of this test is in ${test.src}/src/CLTest.java,
- * which is executed in single-file source-launcher mode,
+ * The body of this test is in ${test.src}/src/p/q/CLTest.java,
+ * which is executed in source-launcher mode,
  * in order to test the classloader used to launch such programs.
  */
 public class GetResourceTest {
@@ -51,10 +52,9 @@ public class GetResourceTest {
 
     void run() throws Exception {
         ToolBox tb = new ToolBox();
-        Path file = Paths.get(tb.testSrc).resolve("src").resolve("CLTest.java");
+        Path file = Paths.get(tb.testSrc).resolve("src/p/q").resolve("CLTest.java");
         new JavaTask(tb)
-            .vmOptions("--add-modules", "jdk.jdeps",
-                       "--add-exports", "jdk.jdeps/com.sun.tools.classfile=ALL-UNNAMED")
+            .vmOptions("--enable-preview", "--source", String.valueOf(Runtime.version().feature()))
             .className(file.toString()) // implies source file mode
             .run(Task.Expect.SUCCESS)
             .writeAll();
